--- a/LuckiteaLogin/service/package.json
+++ b/LuckiteaLogin/service/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
-    "uuid": "^10.0.0"
+    "mongodb": "^4.12.0",
+    "uuid": "^9.0.0"
   }
 }
